--- a/employee/assets/script.css
+++ b/employee/assets/script.css
@@ -1,3 +1,4 @@
+<style>
    /* Compiled dark classes from Tailwind */
    .dark .dark\:divide-gray-700 > :not([hidden]) ~ :not([hidden]) {
      border-color: rgba(55, 65, 81);
@@ -117,3 +118,4 @@
            width: calc(100% - 16rem);
        }        
    }
+ </style>
